--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.0"
 
     defaultConfig {
-        applicationId "com.example.gqueiroz.androidtcc"
+        applicationId "edu.fatec.activity"
         minSdkVersion 21
         targetSdkVersion 23
         versionCode 1
