Reorganização de Activities Função "buscarMaterias" do WS alterada para a activity MateriasTest MainActivity agora gerencia o acesso as outras activities

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,9 @@ android {
     }
 }
 
+repositories { mavenCentral() }
+
 dependencies {
     compile project(':volley')
+    compile 'com.google.code.gson:gson:2.3'
 }
