Funcionalidades de Resposta iniciadas. Pequenas modificações gerais

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,10 @@
             android:name="edu.fatec.activity.DuvidaTestActivity"
             android:label="@string/title_activity_duvida_test" >
         </activity>
+        <activity
+            android:name="edu.fatec.activity.RespostaTest"
+            android:label="@string/title_activity_resposta_test" >
+        </activity>
     </application>
 
 </manifest>
