--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,6 @@ dependencies {
     compile 'com.google.code.gson:gson:2.3'
     compile 'com.android.support:cardview-v7:23.0.+'
     compile 'com.android.support:recyclerview-v7:23.0.+'
+    compile 'com.android.support:design:23.0.+'
+    compile 'com.android.support:support-v4:23.0.+'
 }
