--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -64,6 +65,10 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="edu.fatec.activity.MainActivity" />
+        </activity>
+        <activity
+            android:name="edu.fatec.activity.NovaDuvidaTestActivity"
+            android:label="@string/title_activity_nova_duvida_test" >
         </activity>
     </application>
 
