--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,7 +68,11 @@
         </activity>
         <activity
             android:name="edu.fatec.activity.NovaDuvidaTestActivity"
-            android:label="@string/title_activity_nova_duvida_test" >
+            android:label="@string/title_activity_nova_duvida_test"
+            android:parentActivityName="edu.fatec.activity.DuvidaTestActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="edu.fatec.activity.DuvidaTestActivity" />
         </activity>
     </application>
 
