--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,6 @@
         <activity
             android:name="edu.fatec.activity.MainActivity"
             android:label="@string/app_name" >
-
         </activity>
         <activity
             android:name="edu.fatec.activity.MateriaTestActivity"
@@ -56,11 +55,11 @@
         </activity>
         <activity
             android:name="edu.fatec.activity.LoginActivity"
-            android:label="@string/title_activity_login"
-            android:parentActivityName="edu.fatec.activity.MainActivity" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="edu.fatec.activity.MainActivity" />
+            android:label="@string/title_activity_login">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name="edu.fatec.activity.NovaDuvidaTestActivity"
@@ -73,11 +72,6 @@
         <activity
             android:name="edu.fatec.activity.MainTestActivity"
             android:label="@string/app_name"  >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
     </application>
 
