--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,11 +10,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="edu.fatec.activity.MainActivity"
-            android:label="@string/app_name" >
-        </activity>
-        <activity
-            android:name="edu.fatec.activity.MateriaTestActivity"
+            android:name="edu.fatec.activity.MateriaActivity"
             android:label="@string/title_activity_materia_test"
             android:parentActivityName="edu.fatec.activity.MainActivity" >
             <meta-data
@@ -22,7 +18,7 @@
                 android:value="edu.fatec.activity.MainActivity" />
         </activity>
         <activity
-            android:name="edu.fatec.activity.UsuarioTestActivity"
+            android:name="edu.fatec.activity.NovoUsuarioActivity"
             android:label="@string/title_activity_usuario_test"
             android:parentActivityName="edu.fatec.activity.LoginActivity" >
             <meta-data
@@ -38,7 +34,7 @@
                 android:value="edu.fatec.activity.MainActivity" />
         </activity>
         <activity
-            android:name="edu.fatec.activity.RespostaTestActivity"
+            android:name="edu.fatec.activity.RespostaActivity"
             android:label="@string/title_activity_resposta_test"
             android:parentActivityName="edu.fatec.activity.DuvidaTestActivity" >
             <meta-data
@@ -62,7 +58,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="edu.fatec.activity.NovaDuvidaTestActivity"
+            android:name="edu.fatec.activity.NovaDuvidaActivity"
             android:label="@string/title_activity_nova_duvida_test"
             android:parentActivityName="edu.fatec.activity.DuvidaTestActivity" >
             <meta-data
@@ -70,7 +66,7 @@
                 android:value="edu.fatec.activity.DuvidaTestActivity" />
         </activity>
         <activity
-            android:name="edu.fatec.activity.MainTestActivity"
+            android:name="edu.fatec.activity.MainActivity"
             android:label="@string/app_name"  >
         </activity>
     </application>
