--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.gqueiroz.androidtcc" >
+    package="com.example.gqueiroz.androidtcc">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -8,47 +8,8 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
-        <activity
-            android:name="edu.fatec.activity.MateriaActivity"
-            android:label="@string/title_activity_materia_test"
-            android:parentActivityName="edu.fatec.activity.MainActivity" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="edu.fatec.activity.MainActivity" />
-        </activity>
-        <activity
-            android:name="edu.fatec.activity.NovoUsuarioActivity"
-            android:label="@string/title_activity_usuario_test"
-            android:parentActivityName="edu.fatec.activity.LoginActivity" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="edu.fatec.activity.LoginActivity" />
-        </activity>
-        <activity
-            android:name="edu.fatec.activity.DuvidaTestActivity"
-            android:label="@string/title_activity_duvida_test"
-            android:parentActivityName="edu.fatec.activity.MainActivity" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="edu.fatec.activity.MainActivity" />
-        </activity>
-        <activity
-            android:name="edu.fatec.activity.RespostaActivity"
-            android:label="@string/title_activity_resposta_test"
-            android:parentActivityName="edu.fatec.activity.DuvidaTestActivity" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="edu.fatec.activity.DuvidaTestActivity" />
-        </activity>
-        <activity
-            android:name="edu.fatec.activity.ApresentacaoActivity"
-            android:label="@string/title_activity_apresentacao"
-            android:parentActivityName="edu.fatec.activity.MainActivity" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="edu.fatec.activity.MainActivity" />
-        </activity>
+        android:theme="@style/AppTheme">
+
         <activity
             android:name="edu.fatec.activity.LoginActivity"
             android:label="@string/title_activity_login">
@@ -57,17 +18,60 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name="edu.fatec.activity.MainActivity"
+            android:label="@string/app_name"></activity>
+
+        <activity
+            android:name="edu.fatec.activity.MateriaActivity"
+            android:label="@string/title_activity_materia_test"
+            android:parentActivityName="edu.fatec.activity.MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="edu.fatec.activity.MainActivity" />
+        </activity>
+
+        <activity
+            android:name="edu.fatec.activity.NovoUsuarioActivity"
+            android:label="@string/title_activity_usuario_test"
+            android:parentActivityName="edu.fatec.activity.LoginActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="edu.fatec.activity.LoginActivity" />
+        </activity>
+
+        <activity
+            android:name="edu.fatec.test.DuvidaTestActivity"
+            android:label="@string/title_activity_duvida_test"
+            android:parentActivityName="edu.fatec.activity.MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="edu.fatec.activity.MainActivity" />
+        </activity>
+        <activity
+            android:name="edu.fatec.activity.RespostaActivity"
+            android:label="@string/title_activity_resposta_test"
+            android:parentActivityName="edu.fatec.test.DuvidaTestActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="edu.fatec.test.DuvidaTestActivity" />
+        </activity>
+        <activity
+            android:name="edu.fatec.test.ApresentacaoActivity"
+            android:label="@string/title_activity_apresentacao"
+            android:parentActivityName="edu.fatec.activity.MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="edu.fatec.activity.MainActivity" />
+        </activity>
         <activity
             android:name="edu.fatec.activity.NovaDuvidaActivity"
             android:label="@string/title_activity_nova_duvida_test"
-            android:parentActivityName="edu.fatec.activity.DuvidaTestActivity" >
+            android:parentActivityName="edu.fatec.test.DuvidaTestActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="edu.fatec.activity.DuvidaTestActivity" />
-        </activity>
-        <activity
-            android:name="edu.fatec.activity.MainActivity"
-            android:label="@string/app_name"  >
+                android:value="edu.fatec.test.DuvidaTestActivity" />
         </activity>
     </application>
 
