--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,7 @@
         <activity
             android:name="edu.fatec.activity.RespostaActivity"
             android:label="@string/title_activity_resposta_test"
-            android:parentActivityName="edu.fatec.test.DuvidaTestActivity" >
+            android:parentActivityName="edu.fatec.activity.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="edu.fatec.test.DuvidaTestActivity" />
@@ -62,14 +62,18 @@
         <activity
             android:name="edu.fatec.activity.NovaDuvidaActivity"
             android:label="@string/title_activity_nova_duvida_test"
-            android:parentActivityName="edu.fatec.test.DuvidaTestActivity" >
+            android:parentActivityName="edu.fatec.activity.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="edu.fatec.test.DuvidaTestActivity" />
         </activity>
         <activity
             android:name="edu.fatec.activity.PerfilUsuarioActivity"
-            android:label="@string/title_activity_perfil_usuario" >
+            android:label="@string/title_activity_perfil_usuario"
+            android:parentActivityName="edu.fatec.activity.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="edu.fatec.test.DuvidaTestActivity" />
         </activity>
     </application>
 
